HelloUltraviolet/Fixtures/RejectedSource/Procedures/PostconditionsDiagnostic/Source/Main.uv
//! Rejected contract specimen for postcondition diagnostics.

public procedure postconditionsDiagnosticReference() -> i32 {
    return @result
}
